--- a/Festival-App/Festival-App/Platform/XIBs/PinDetailsVC.xib
+++ b/Festival-App/Festival-App/Platform/XIBs/PinDetailsVC.xib
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PinDetailsVC" customModule="Festival_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LocationDetailsViewController" customModule="Festival_App" customModuleProvider="target">
             <connections>
                 <outlet property="addressLbl" destination="3mn-vE-cUF" id="b8M-ib-JP8"/>
                 <outlet property="descriptionTextView" destination="2nW-iz-sot" id="4FI-K6-ftw"/>
